@@ -1,7 +1,7 @@
 ############################################################################
 # sched/semaphore/Make.defs
 #
-#   Copyright (C) 2014 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2014-2015 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -33,8 +33,9 @@
 #
 ############################################################################
 
-CSRCS += sem_destroy.c sem_wait.c sem_trywait.c sem_timedwait.c
-CSRCS += sem_post.c sem_recover.c sem_waitirq.c
+CSRCS += sem_destroy.c sem_wait.c sem_trywait.c sem_tickwait.c
+CSRCS += sem_timedwait.c sem_timeout.c sem_post.c sem_recover.c
+CSRCS += sem_waitirq.c
 
 ifeq ($(CONFIG_PRIORITY_INHERITANCE),y)
 CSRCS += sem_initialize.c sem_holder.c
