@@ -46,26 +46,6 @@
 #ifdef CONFIG_PRIORITY_INHERITANCE
 
 /****************************************************************************
- * Pre-processor Definitions
- ****************************************************************************/
-
-/****************************************************************************
- * Private Type Declarations
- ****************************************************************************/
-
-/****************************************************************************
- * Global Variables
- ****************************************************************************/
-
-/****************************************************************************
- * Private Variables
- ****************************************************************************/
-
-/****************************************************************************
- * Private Functions
- ****************************************************************************/
-
-/****************************************************************************
  * Public Functions
  ****************************************************************************/
 
@@ -83,6 +63,7 @@
  *   None
  *
  * Assumptions:
+ *   Called once during OS startup initialization
  *
  ****************************************************************************/
 
